# h-nbdl-repo

./: LICENSE  README.md  pyproject.toml  setup.py
configs/: ep.yaml  radiomics.yaml  synthetic.yaml
experiments/electrophysiology/: run_ep.py
experiments/radiomics/: run_radiomics.py
experiments/synthetic/: benchmark_real.py  run_synthetic.py
h_nbdl/: __init__.py
h_nbdl/analysis/: __init__.py  ablations.py  calibration.py  comparison.py  cross_validation.py  diagnostics.py  identifiability.py  verify_propositions.py
h_nbdl/downstream/: __init__.py  causal_hbm.py  rl_agent.py
h_nbdl/inference/: __init__.py  amortized_vi.py  concrete.py  elbo.py  gibbs.py
h_nbdl/models/: __init__.py  encoder.py  generative.py  hierarchical_nbdl.py  priors.py
h_nbdl/utils/: __init__.py  data.py  metrics.py  visualization.py
notebooks/: H_NBDL_Experiments (1).ipynb  H_NBDL_Tables56 (1).ipynb  tutorial.py
paper/: README.md  main.tex
results/: ablations.json  calibration.json  computed_table4.json  scaling.json  table4.json  table5_radiomics.json  table6_ep.json
scripts/: reproduce_paper.sh
scripts/figures/: generate_all.py  paper_figures.py
tests/: test_analysis.py  test_avi.py  test_elbo.py  test_generative.py  test_gibbs.py
