[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "h-nbdl"
version = "0.1.0"
description = "Hierarchical Nonparametric Bayesian Dictionary Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "[Author A]", email = "author@university.edu"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
